--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "scikit-learn (>=1.6.1,<2.0.0)",
     "matplotlib (>=3.10.1,<4.0.0)",
-    "interpret (>=0.6.10,<0.7.0)"
+    "interpret (>=0.6.10,<0.7.0)",
+    "jupyterlab (>=4.4.2,<5.0.0)"
 ]
 
 
