--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "scikit-learn (>=1.6.1,<2.0.0)",
     "matplotlib (>=3.10.1,<4.0.0)",
     "interpret (>=0.6.10,<0.7.0)",
-    "jupyterlab (>=4.4.2,<5.0.0)"
+    "jupyterlab (>=4.4.2,<5.0.0)",
+    "imbalanced-learn (>=0.14.0,<0.15.0)"
 ]
 
 
